[gd_scene load_steps=19 format=3 uid="uid://b76ikgus0leci"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_57cm0"]
[ext_resource type="PackedScene" uid="uid://d2722l1rurupt" path="res://Player/train_wagon.tscn" id="2_pcmd7"]
[ext_resource type="Texture2D" uid="uid://brja8a8d2c1vy" path="res://Assets/Art/SnakeTrain_Head_Bite.png" id="3_38y3x"]
[ext_resource type="Texture2D" uid="uid://tjrgn6sb6nsx" path="res://Assets/Art/snake_normal.png" id="4_ja8eq"]
[ext_resource type="PackedScene" uid="uid://ckp6e67t60hyx" path="res://bound_camera_2d.tscn" id="5_hlft0"]
[ext_resource type="Texture2D" uid="uid://dytvctiebqjli" path="res://Assets/Art/SnakeTrain_Tail.png" id="6_xsqd8"]
[ext_resource type="Texture2D" uid="uid://p402isn11ko" path="res://Assets/Art/BoostBarBG.png" id="7_qr7ft"]
[ext_resource type="Texture2D" uid="uid://bksp142tua0ji" path="res://Assets/Art/BoostBar.png" id="8_ls7ly"]
[ext_resource type="Texture2D" uid="uid://cicsyovieieqv" path="res://Assets/Art/BoostBarFill.png" id="9_hwl7o"]
[ext_resource type="Script" path="res://Player/input_manager.gd" id="10_rsc34"]

[sub_resource type="CanvasTexture" id="CanvasTexture_nrepr"]
diffuse_texture = ExtResource("3_38y3x")
normal_texture = ExtResource("4_ja8eq")

[sub_resource type="Animation" id="Animation_p58ls"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ceeba"]
resource_name = "bite_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 0]
}

[sub_resource type="Animation" id="Animation_uxrvx"]
resource_name = "bite_start"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 3, 4]
}

[sub_resource type="Animation" id="Animation_y2t2t"]
resource_name = "open"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sdtcy"]
_data = {
"RESET": SubResource("Animation_p58ls"),
"bite_end": SubResource("Animation_ceeba"),
"bite_start": SubResource("Animation_uxrvx"),
"open": SubResource("Animation_y2t2t")
}

[sub_resource type="Gradient" id="Gradient_el5ac"]
offsets = PackedFloat32Array(0, 0.63871, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.0764308, 0.0764308, 0.0764308, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ma0bw"]
gradient = SubResource("Gradient_el5ac")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="Player" type="Node2D"]
script = ExtResource("1_57cm0")
base_movement_time = 0.3
boost_multiplier = 0.75

[node name="InputManager" type="Node" parent="."]
script = ExtResource("10_rsc34")

[node name="MovementTimer" type="Timer" parent="."]
process_callback = 0

[node name="Wagons" type="Node2D" parent="."]

[node name="Head" parent="Wagons" instance=ExtResource("2_pcmd7")]
unique_name_in_owner = true
z_index = 1
can_have_passenger = false

[node name="Sprite" parent="Wagons/Head" index="0"]
texture = SubResource("CanvasTexture_nrepr")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wagons/Head"]
libraries = {
"": SubResource("AnimationLibrary_sdtcy")
}

[node name="BoundCamera2D" parent="Wagons/Head" instance=ExtResource("5_hlft0")]
limit_left = -384
limit_top = -160
limit_right = 704
limit_bottom = 480

[node name="Corner1" parent="Wagons/Head/BoundCamera2D" index="0"]
position = Vector2(-384, -160)

[node name="Corner2" parent="Wagons/Head/BoundCamera2D" index="1"]
position = Vector2(704, 480)

[node name="ReferenceRect" parent="Wagons/Head/BoundCamera2D/CanvasLayer" index="0"]
offset_left = -384.0
offset_top = -160.0
offset_right = -576.0
offset_bottom = -240.0

[node name="PointLight2D2" type="PointLight2D" parent="Wagons/Head"]
position = Vector2(31, 14)
color = Color(1, 1, 0.486275, 1)
energy = 0.85
texture = SubResource("GradientTexture2D_ma0bw")

[node name="PointLight2D" type="PointLight2D" parent="Wagons/Head"]
position = Vector2(1, 14)
color = Color(1, 1, 0.486275, 1)
energy = 0.85
texture = SubResource("GradientTexture2D_ma0bw")

[node name="Tail" parent="Wagons" instance=ExtResource("2_pcmd7")]
unique_name_in_owner = true
position = Vector2(0, -32)
can_have_passenger = false

[node name="Sprite" parent="Wagons/Tail" index="0"]
texture = ExtResource("6_xsqd8")

[node name="SoundTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="HUDLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -40.0
offset_right = 128.0
grow_horizontal = 2
grow_vertical = 0

[node name="BoostBar" type="TextureProgressBar" parent="HUDLayer/MarginContainer"]
visible = false
layout_mode = 2
texture_under = ExtResource("7_qr7ft")
texture_over = ExtResource("8_ls7ly")
texture_progress = ExtResource("9_hwl7o")

[connection signal="input_direction_changed" from="InputManager" to="." method="_on_input_manager_input_direction_changed"]
[connection signal="output_direction_changed" from="InputManager" to="." method="_on_input_manager_output_direction_changed"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="animation_finished" from="Wagons/Head/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_sound_timer_timeout"]

[editable path="Wagons/Head"]
[editable path="Wagons/Head/BoundCamera2D"]
[editable path="Wagons/Tail"]
